Fix transitions on Safari for category tooltips.

--- a/css/blog/_blog.scss
+++ b/css/blog/_blog.scss
@@ -11,7 +11,7 @@
   	visibility: hidden;
 	opacity: 0;
 	pointer-events: none;
-	-webkit-transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
+	-webkit-transition: opacity 300ms ease-in-out, -webkit-transform 300ms ease-in-out;
 	-moz-transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
 	transition: opacity 300ms ease-in-out, transform 300ms ease-in-out;
 	-webkit-transform: translateY(2px);
